Work-Flow Manager

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
           Introducing the first ever web application, which will manage your
           work-flow. Our app let's you to sit back, relax and work smarter.The main feature which distinguish our app from other applications is the status view of a current work-flow.
         </p>
-        <a routerLink="" class="btn" style="width: 170px;"><span>Explore Now</span></a>
+        <a routerLink="/create" class="btn" style="width: 170px;"><span>Create Now</span></a>
       </div>
     </div>
     <div class="blob"></div>
