--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,23 @@
-<p>signup works!</p>
+<div class="container px-4 py-5 mx-auto">
+    <div class="card card0">
+        <div class="d-flex flex-lg-row flex-column-reverse">
+            <div class="card card1">
+                <div class="row d-flex px-lg-4 px-3 pt-3">
+                </div>
+                <div class="row justify-content-center " style="margin-top: -50px;">
+                    <div class="col-lg-8 my-5">
+                        <h3 class="mb-3">Get your Work-flow account now.</h3> <small class="text-muted">We are glad that you are here.</small>
+                        <div class="form-group mt-5"> <input type="text" id="name" class="form-control" required> <label class="form-control-placeholder" for="name">Full Name</label> </div>
+                        <div class="form-group mt-4"> <input type="email" id="mail" class="form-control" required> <label class="form-control-placeholder" for="mail">Email</label> </div>
+                        <div class="row justify-content-center my-3"> <button class="btn btn-gray">Sign up</button> </div>
+                        <div class="row justify-content-center my-2"> <small class="text-muted" style="font-size: larger; text-align: center;">or</small> </div>
+                        <div class="row justify-content-center my-2"> <a href="#" style="text-align: center;"><img id="google" src="https://i.imgur.com/8lJt6UN.png" class="mr-2">Sign up with Google</a> </div>
+                    </div>
+                    <div class="bottom text-center mb-3" > <a routerLink="/login" id="already" class="sm-text mx-auto mb-3">Already have an account?</a> </div>
+                </div>
+            </div>
+            <div class="card card2"> <img id="image" src="https://darvideo.tv/wp-content/uploads/2021/02/b3f4f430-d5d9-4a5c-b409-259dc2e183af.jpg"> </div>
+        </div>
+    </div>
+</div>
+
