--- a/src/app/create-wf/create-wf.component.html
+++ b/src/app/create-wf/create-wf.component.html
@@ -1,31 +1,44 @@
-<div class="container1">
-    
-    <div class="card1">
-      <div id="glass-div">
-        <h2 style="color: #ff4d4d; font-weight: bolder; letter-spacing: 1px; text-transform: uppercase;" >Work-Flow Manager</h2>
-        <span><h1 class="title1">(Designed For Work)</h1></span><br>
-        <p class="subtitle1" >
-          Introducing the first ever web application, which will manage your
-          work-flow. Our app let's you to sit back, relax and work smarter.The main feature which distinguish our app from other applications is the status view of a current work-flow.
-        </p>
-        <a routerLink="" class="btn" style="width: 170px;"><span>Explore Now</span></a>
+<section style="background-color: black;">
+<div class="container">
+  <div class="register-div">
+      <div class="title">
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content mb-md-0" style="margin-left: -0px;">
+          <svg xmlns="http://www.w3.org/2000/svg" style="color: black;" width="25" height="25" fill="currentColor" class="bi bi-stack-overflow" viewBox="0 0 16 16">
+            <path d="M12.412 14.572V10.29h1.428V16H1v-5.71h1.428v4.282h9.984z"/>
+            <path d="M3.857 13.145h7.137v-1.428H3.857v1.428zM10.254 0 9.108.852l4.26 5.727 1.146-.852L10.254 0zm-3.54 3.377 5.484 4.567.913-1.097L7.627 2.28l-.914 1.097zM4.922 6.55l6.47 3.013.603-1.294-6.47-3.013-.603 1.294zm-.925 3.344 6.985 1.469.294-1.398-6.985-1.468-.294 1.397z"/>
+          </svg><h1>Create your Work-Flow</h1>
+        </ul>
       </div>
-    </div>
-    <div class="blob"></div>
-  </div>
+      <div class="register-form">
+          <form [formGroup]="formValue">
+              <div class="input-div">
+                  <input type="text" formControlName = "workflowname" id="Work-Flow-Name" required autocomplete="off">
+                  <label for="Work-Flow-Name">Work Flow Name</label>
+                  <div class="bar"></div>
+              </div><br>
+              <div class="input-div">
+                  <input type="text" formControlName = "workflowdescription" id="details" required autocomplete="off">
+                  <label for="details">Work Flow Description</label>
+                  <div class="bar"></div>
 
-  <div class="container1">
-    
-    <div class="card1">
-      <div id="glass-div">
-        <h2 style="color: #ff4d4d; font-weight: bolder; letter-spacing: 1px; text-transform: uppercase;" >Work-Flow Manager</h2>
-        <span><h1 class="title1">(Designed For Work)</h1></span><br>
-        <p class="subtitle1" >
-          Introducing the first ever web application, which will manage your
-          work-flow. Our app let's you to sit back, relax and work smarter.The main feature which distinguish our app from other applications is the status view of a current work-flow.
-        </p>
-        <a routerLink="" class="btn" style="width: 170px;"><span>Explore Now</span></a>
+              </div><br>
+              <div class="input-div">
+                  <input type="text" formControlName = "workflowstatus" id="status" required autocomplete="off">
+                  <label for="status">Work Flow Status</label>
+                  <div class="bar"></div>
+
+              </div><br>
+        
+              <div class="input-div">
+                  <!-- <input type="button" value="Submit"> -->
+                  <button (click)="postWorkflowDetails()" id="submit">Create</button>
+              </div>
+          </form>
       </div>
-    </div>
-    <div class="blob"></div>
+      <div class="go-to-list">
+          <h3>Want to see your =></h3>
+          <h3><a routerLink="/wf-list">Work Flow List</a></h3>
+      </div>
   </div>
+</div>
+</section>
