--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -374,7 +374,7 @@ ul {
    margin-bottom: 2rem;
    letter-spacing: 1px;
    line-height: 32px;
-   font-style: italic;
+   /* font-style: italic; */
    letter-spacing: 1.5px;
    word-spacing: 1px;
  }
