--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,43 @@
-<p>login works!</p>
+<div class="container-fluid">
+    <div class="row no-gutter">
+        
+        <div class="col-md-6 d-none d-md-flex bg-image"></div>
+        
+        <div class="col-md-6 bg-light">
+            <div class="login d-flex align-items-center py-5">
+               
+                <div class="container" style="margin-top: 30px;">
+                    <div class="row">
+                        <div class="col-lg-10 col-xl-7 mx-auto">
+                            <h3 class="display-4">Login</h3>
+                            <p class="text-muted mb-4">workflowmanager.com</p>
+                            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+                                <div class="form-group mb-3">
+                                    <input id="inputEmail" type="email" formControlName="email"  [ngClass]="{ 'is-invalid': submitted && f.email.errors }" placeholder="Email address" required="" autofocus="" class="form-control ">
+                                    <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                                        <div *ngIf="f.email.errors.required">Email is required</div>
+                                        <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+                                     </div>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <input id="inputPassword" type="password" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Password" required=""  autofocus=""  class="form-control">
+                                    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                                        <div *ngIf="f.password.errors.required">Password is required</div>
+                                     </div>
+                                </div>
+                               
+                                <button type="submit" class="btn " style="margin-left: 110px; margin-top: 20px;">Login</button> <br><br><br>
+
+                                <div class="create" style="padding-left: 75px;">
+                                    <p>Need an account? <a routerLink="/signup" id="create">Signup now</a></p>
+                                </div>
+                            
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
