--- a/src/app/update-wf/update-wf.component.css
+++ b/src/app/update-wf/update-wf.component.css
@@ -88,10 +88,10 @@ input:focus ~ .bar::before{
 }
 
 #submit:hover{
-  background-color: #000000;
-  color: #F44336;
-  transition: all 0.4s ease-in-out;
-  transform: translateX(20px);
+    background-color: #000000;
+    color: #F44336;
+    transition: all 0.4s ease-in-out;
+    transform: translateX(20px);
 }
 
 label{
@@ -143,10 +143,11 @@ a:hover{
     color: #ffffff;
     transition: all 0.3s ease-in;
 }
-
 a{
+    cursor: pointer;
     text-decoration: none;
     color: black;
     transition: 100ms;
 }
+
 
