Work-Flow Manager Full Stack

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
           Introducing the first ever web application, which will manage your
           work-flow. Our app let's you to sit back, relax and work smarter.The main feature which distinguish our app from other applications is the status view of a current work-flow.
         </p>
-        <a routerLink="" class="btn" style="width: 170px;"><span>Explore Now</span></a>
+        <a routerLink="/create-category" class="btn" style="width: 170px;"><span>Create Now</span></a>
       </div>
     </div>
     <div class="blob"></div>
@@ -19,8 +19,8 @@
   <!-- Steps of Work-Flow -->
 <div id="steps"><p style="color: white;">Monitor your Flow of Work in just <u style="color: rgb(0, 0, 0); text-decoration: none;">three Simple Steps</u></p></div>
 <div class="box-wrapper3">
-  <div class="box3" style="padding-left: 65px;"><h2>CREATE</h2></div><span style="font-size: 5em; padding-left: 100px;">&#10132;</span>
-  <div class="box3" style="padding-left: 65px;"><h2>UPDATE</h2></div><span style="font-size: 5em; padding-left: 100px;">&#10132;</span>
+  <div class="box3" style="padding-left: 65px;"><h2>CREATE</h2></div><span style="font-size: 5em; padding-left: 100px; color:#FF4D4D ;">&#10132;</span>
+  <div class="box3" style="padding-left: 65px;"><h2>UPDATE</h2></div><span style="font-size: 5em; padding-left: 100px; color:#FF4D4D">&#10132;</span>
   <div class="box3" style="padding-left: 55px;"><h2>MONITOR</h2></div>
 </div>
 
@@ -187,7 +187,7 @@
 
         <h4>Status of Work-Flows</h4>
         <p>
-          Monitor your work-flow by giving status banners as OPEN, CLOSE and IN PROGRESS. By this tracking your work-flows will be easy.
+          Monitor your work-flow by giving status banners as CREATE, IN PROGRESS and COMPLETED. By this tracking your work-flows will be easy.
         </p>
       </div>
     </div>
@@ -199,7 +199,7 @@
     
     <div class="card2">
       
-      <h1 class="title2" style="color: #f70c14;">Designed For Work</h1>
+      <h1 class="title2" style="color: #FF4D4D;">Designed For Work</h1>
       <p class="subtitle2" style="font-size: large">
         Introducing the first ever web application, which will manage your
         work-flow. Our app let's you to sit back, relax and work smarter.
@@ -222,7 +222,7 @@
           verticals
         </li>
       </ul>
-      <a routerLink="" class="btn" style="width: 170px; margin-top: 60px;"><span>Get Started</span></a>
+      <a routerLink="/create-category" class="btn" style="width: 170px; margin-top: 60px;"><span>Get Started</span></a>
       
   
     </div>
