--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -88,11 +88,11 @@ ul {
   margin-top: 60px;
   margin-bottom: 60px;
   margin-left: 105px;
-  background: #F70404;
-  background: -moz-linear-gradient(top, #F70404 0%, #000000 52%, #FF0C15 100%);
+  background: #000000;
+  /* background: -moz-linear-gradient(top, #F70404 0%, #000000 52%, #FF0C15 100%);
   background: -webkit-linear-gradient(top, #F70404 0%, #000000 52%, #FF0C15 100%);
-  background: linear-gradient(to bottom, #F70404 0%, #000000 52%, #FF0C15 100%);
-  color: white;
+  background: linear-gradient(to bottom, #F70404 0%, #000000 52%, #FF0C15 100%); */
+  color: #ff1d1d;
   border-radius: 5px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
@@ -123,8 +123,8 @@ ul {
   transform: scale(1.25, 1.25);
   /* border: 2px solid #f70c14; */
   background: transparent;
-  background-color: #000000;
-  color: #f70c14;
+  background-color: #ff4646;
+  color: #000000;
 }
 
 .box3:hover::after {
@@ -298,7 +298,7 @@ ul {
   font-size: 1.2em;
   font-weight: bolder;
   display: block;
-  background: #FF4D4D;
+  background: #f70c14;
   /* border: 2px solid #f70c14; */
   /* border-radius: 1rem; */
   color: #fff;
@@ -354,7 +354,7 @@ ul {
    width: 1510px;
    min-height: 440px;
    /* background: rgba( 255, 255, 255, 0.15 ); */
-   box-shadow: 0 8px 20px 0 #f70c14;
+   box-shadow: 0 0 20px 8px #f4f1f1;
    border-radius: 3px;
    -webkit-backdrop-filter: blur(18px);
    padding: 50px;
@@ -374,7 +374,7 @@ ul {
    margin-bottom: 2rem;
    letter-spacing: 1px;
    line-height: 32px;
-   font-style: italic;
+   /* font-style: italic; */
    letter-spacing: 1.5px;
    word-spacing: 1px;
  }
