--- a/src/app/workflow-list/workflow-list.component.html
+++ b/src/app/workflow-list/workflow-list.component.html
@@ -1,1 +1,99 @@
-<p>workflow-list works!</p>
+<div class="container-xl">
+	<div class="table-responsive">
+		<div class="table-wrapper">
+			<div class="table-title">
+				<div class="row">
+					<div class="col-sm-8">
+						<h2>Manage &nbsp;your&nbsp;<b>{{workflow.category}}</b> Assignments</h2>
+					</div>
+					<div  class="col-sm-12 add-new" style="height: 50px;">
+						<a routerLink="/create" class="btn btn-dark" style="height: 50px; width: 230px; padding: 10px; font-size:1.1em; border-radius: 5px;" data-toggle="modal"><svg style="color: #ff4d4d;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+              <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z"/>
+               </svg><span class="add-new">&nbsp;&nbsp;Add New Assignment</span></a>						
+					</div>
+				</div>
+				<div class="wrapper" >
+					<input type="radio" value="All" name="filter"  (change)="radios($event)" name="select" id="option-1" checked>
+					<input type="radio" value="Create" name="filter"  (change)="radios($event)" name="select" id="option-2">
+					<input type="radio" value="In-Progress" name="filter"  (change)="radios($event)" name="select" id="option-3">
+					<input type="radio" value="Completed" name="filter"  (change)="radios($event)" name="select" id="option-4">
+
+					  <label for="Filter" for="option-1" class="option option-1">
+						<div class="dot"></div>
+						 <span >All</span>
+						 </label>
+					  <label for="Filter" for="option-2" class="option option-2">
+						<div class="dot"></div>
+						 <span >Create</span>
+					  </label>
+					  <label for="Filter" for="option-3" class="option option-3">
+						<div class="dot"></div>
+						 <span >In-Progress</span>
+						 </label>
+					  <label for="Filter" for="option-4" class="option option-4">
+						<div class="dot"></div>
+						 <span > Completed</span>
+					  </label>
+				   </div>
+				<!-- <label for="Filter">Create</label>
+				<input style="color: white;" type="radio" value="Create" name="filter"  (change)="radios($event)">
+				<label for="Filter">In-Progress</label>
+				<input style="color: white;" type="radio" value="In-Progress" name="filter"  (change)="radios($event)">
+				<label for="Filter">Completed</label>
+				<input style="color: white;" type="radio" value="Completed" name="filter"  (change)="radios($event)">
+				<label for="Filter">All</label>
+				<input style="color: white;" type="radio" value="All" name="filter"  (change)="radios($event)"> -->
+			</div>
+			<table class="table table-striped table-hover">
+				<thead style="color: rgb(230, 43, 43); font-size: 1.25em;">
+					<tr >
+						<th>
+						</th>
+						<th >Assignment Name</th>
+						<th>Assignment Description</th>
+						<th>Assignment Status</th>
+						<th>Actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr *ngFor="let workflow of workflows" >
+						<td>
+		            <!-- <h1>Filters</h1>		 -->
+						</td>
+						<td style="color: white;">{{workflow.workFlowName}}</td>
+						<td style="color: white;"><p>{{workflow.workFlowDescription}}</p></td>
+						<td style="letter-spacing: 1px;" [ngStyle]="{'color': workflow.workFlowStatus === 'Create' ? '#00E600' : workflow.workFlowStatus === 'Completed' ? '#FF0000' : workflow.workFlowStatus === 'In-Progress' ? '#9900E6' : '#FF8080'}"> <a (click) = "editWorkFlow(workflow.id)" style="margin-left: -120px; cursor: pointer;" class="edit" data-toggle="modal" data-title="Edit-Details"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pen-fill" viewBox="0 0 16 16">
+							<path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001z"/>
+						  </svg>
+						</a> <svg style="margin-left: 120px;" [ngStyle]="{'color': workflow.workFlowStatus === 'Create' ? '#00E600' : workflow.workFlowStatus === 'Completed' ? '#FF0000' : workflow.workFlowStatus === 'In-Progress' ? '#9900E6' : '#FF8080'}" xmlns="http://www.w3.org/2000/svg" width="11" height="11" fill="currentColor" class="bi bi-circle-fill" viewBox="0 0 16 16">
+              <circle cx="8" cy="8" r="8"/>
+            </svg> {{workflow.workFlowStatus}}</td>
+						<td>
+							<!-- <a (click) = "editWorkFlow(workflow.id)" style="margin-left: -100px; cursor: pointer;" class="edit" data-toggle="modal" title="Edit-Details"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-card-list" viewBox="0 0 16 16">
+								<path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
+								<path d="M5 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 5 8zm0-2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0 5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm-1-5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zM4 8a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm0 2.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
+							  </svg>
+                            </a> -->
+							<a (click) = "update(workflow.id)" style="margin-left: -80px; cursor: pointer;" class="update" data-toggle="modal" data-title="Update-Status"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
+								<path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
+								<path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
+							  </svg>
+                            </a>
+							<a (click) = "deleteworkflow(workflow.id)"  style="cursor: pointer; margin-left: 40px;" class="delete" data-toggle="modal" data-title="Delete"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                                <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
+                                </svg>
+                            </a>             
+                            <a (click) = "workflowDetails(workflow.id)"  style="cursor: pointer; margin-left: 35px;" class="view" data-toggle="modal" data-title="View-Details"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-eye-fill" viewBox="0 0 16 16">
+                                <path d="M10.5 8a2.5 2.5 0 1 1-5 0 2.5 2.5 0 0 1 5 0z"/>
+                                <path d="M0 8s3-5.5 8-5.5S16 8 16 8s-3 5.5-8 5.5S0 8 0 8zm8 3.5a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7z"/>
+                                </svg>
+                            </a>
+
+						</td>
+          </tr>
+				</tbody>
+			</table>
+       <button routerLink="/category-list" id="back-home"><- Work-Flow List</button>
+		</div>
+	</div>        
+</div>
